# tail-game-manifests

./: .gitignore  bh3_cn.json  bh3_global.json  hk4e_cn.json  hk4e_global.json  hkrpg_cn.json  hkrpg_global.json  nap_cn.json  nap_global.json  pyproject.toml  repository.json
.github/workflows/: auto_update.yml  update.yml
scripts/: play.py
