[project]
name = "game-manifests"
version = "0.0.1"
requires-python = "~=3.14.0"
dependencies = [
    "anyio",
    "pydantic",
    "pydantic-extra-types[semver]",
    "tail-launcher-sdk @ git+https://github.com/HellLord77/tail-launcher-sdk.git@v0.2.4",
]

[dependency-groups]
dev = ["ruff"]
play = [
    "play-launcher-sdk @ git+https://github.com/HellLord77/play-launcher-sdk.git@v0.3.1",
]

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D1", "D203", "D212", "INP001", "S101", "T201"]


[tool.ruff.lint.isort]
force-single-line = true
